# btxpool

./: .gitignore  Caddyfile  Dockerfile  README.md  agents.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/systemd/: btxd.service  btxpool-backup.service  btxpool-backup.timer  btxpool-health.service  btxpool-health.timer  btxpool-peers.service  btxpool-peers.timer  btxpool-wallet-backup.service  btxpool-wallet-backup.timer  btxpool.service
docs/: PRODUCTION_PLAN.md  PRODUCTION_RUNBOOK.md  VERCEL_DEPLOY.md
frontend/: .env.example  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/scripts/: prepare-vercel.mjs
frontend/src/: App.css  App.tsx  api.ts  index.css  vite-env.d.ts
pool/: __init__.py  __main__.py  api.py  block_builder.py  btx_rpc.py  config.py  database.py  difficulty.py  job_manager.py  network_monitor.py  payouts.py  pplns.py  share_validator.py  stats.py
scripts/: backup-db.sh  backup-wallet.sh  check-wallet.sh  deploy.sh  ensure-peers.sh  health-check.sh  install-systemd.sh  install-windows-tasks.ps1  netbird-stratum.ps1  run-wsl-hidden.ps1  setup-btxd-wallet.sh  snapshot-status.sh  start-caddy-hidden.ps1  start-cloudflared-hidden.ps1  start.sh  supervise-wsl.sh  wsl-port-forward.ps1  wsl-port-forward.sh
tests/: test_block_builder.py  test_database.py  test_job_manager.py  test_network_monitor.py  test_payouts.py  test_pplns.py  test_stats.py  test_stratum_job_assignment.py  test_stratum_nonce.py  test_stratum_submit_difficulty.py  test_vardiff.py
(+3 files in other folders)
