[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "btxpool"
version = "0.1.0"
description = "Self-hosted BTX MatMul mining pool with Stratum and web dashboard"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pyyaml>=6.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
btxpool = "pool.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pool*"]